fix: Folder structure re-optimized

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BookLib</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/styles.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/typography.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/base.css" />
   </head>
   <body>
     <header id="header"></header>
 
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="/assets/js/main.js"></script>
     <script type="text/javascript" src="/assets/js/components.js"></script>
   </body>
 </html>
