feat: Book Container added with Book collection grid from API data; feat: Favicon Added

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BookLib</title>
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="/assets/css/styles.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/typography.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/base.css" />
   </head>
   <body>
     <header id="header"></header>
+
+    <!-- Book Container -->
+    <section id="book-section" class="container">
+      <h2>Collections</h2>
+
+      <div id="loader">Loading books...</div>
+      <div id="book-container"></div>
+    </section>
 
     <script type="text/javascript" src="/assets/js/main.js"></script>
     <script type="text/javascript" src="/assets/js/components.js"></script>
