fix: Navbar, Book Card design optimized with hover effect

--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/base.css" />
   </head>
   <body>
-    <header id="header"></header>
+    <header id="header" class="shadow"></header>
 
     <!-- Book Container -->
     <section id="book-section" class="container">
