--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,17 @@
 
     <!-- Book Container -->
     <section id="book-section" class="container">
-      <h2>Collections</h2>
+      <di class="title-heading-container">
+        <h2>Collections</h2>
+
+        <div>
+          <input
+            type="text"
+            id="search-bar"
+            placeholder="Search by author or title..."
+          />
+        </div>
+      </di>
 
       <!-- Spin Loader -->
       <div id="loader">Loading books...</div>
