feat: Wishlist toggling with heart icon implemented on Book Card

--- a/pages/index.html
+++ b/pages/index.html
@@ -55,7 +55,7 @@
       </div>
     </section>
 
-    <script type="text/javascript" src="/assets/js/main.js"></script>
-    <script type="text/javascript" src="/assets/js/components.js"></script>
+    <script type="module" src="/assets/js/main.js"></script>
+    <script type="module" src="/assets/js/components.js"></script>
   </body>
 </html>
