feat: Wishlist Page functionalites added and optimized; fix: edge case error message design updated

--- a/pages/book-details.html
+++ b/pages/book-details.html
@@ -12,7 +12,7 @@
   <body>
     <header id="header"></header>
 
-    <script type="text/javascript" src="/assets/js/main.js"></script>
-    <script type="text/javascript" src="/assets/js/components.js"></script>
+    <script type="module" src="/assets/js/main.js"></script>
+    <script type="module" src="/assets/js/components.js"></script>
   </body>
 </html>
