--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -14,9 +14,9 @@
 
     <!-- Wishlist Container -->
     <section id="wishlist-section" class="container">
-      <di class="title-heading-container">
+      <div class="title-heading-container">
         <h2>Your Wishlist</h2>
-      </di>
+      </div>
 
       <div id="wishlist-container-wrapper">
         <!-- Spin Loader -->
