--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,7 @@
 
     <!-- Book Container -->
     <section id="book-section" class="container">
-      <di class="title-heading-container">
+      <div class="title-heading-container">
         <h2>Collections</h2>
 
         <div id="search-filter-container">
@@ -37,7 +37,7 @@
             </select>
           </div>
         </div>
-      </di>
+      </div>
 
       <div id="book-container-wrapper">
         <!-- Spin Loader -->
