fix: Topics text splitted with pipe symbol

--- a/pages/book-details.html
+++ b/pages/book-details.html
@@ -25,10 +25,25 @@
         <h2 id="book-title">Loading...</h2>
         <div id="book-details">
           <p id="book-authors"></p>
-          <p id="book-topics"></p>
-          <p id="book-download-count"></p>
-          <p id="book-media-type"></p>
-          <p id="book-copyright"></p>
+
+          <table class="book-info-table">
+            <tr>
+              <th>Topics</th>
+              <td id="book-topics"></td>
+            </tr>
+            <tr>
+              <th>Download Count</th>
+              <td id="book-download-count"></td>
+            </tr>
+            <tr>
+              <th>Media Type</th>
+              <td id="book-media-type"></td>
+            </tr>
+            <tr>
+              <th>Copyright</th>
+              <td id="book-copyright"></td>
+            </tr>
+          </table>
         </div>
       </div>
     </div>
