--- a/pages/index.html
+++ b/pages/index.html
@@ -41,7 +41,7 @@
 
       <div id="book-container-wrapper">
         <!-- Spin Loader -->
-        <div id="loader">Loading books...</div>
+        <div id="loader" class="spinner"></div>
 
         <!-- Book Grid -->
         <div id="book-container"></div>
