--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -20,7 +20,7 @@
 
       <div id="wishlist-container-wrapper">
         <!-- Spin Loader -->
-        <div id="loader">Loading books...</div>
+        <div id="loader" class="spinner"></div>
 
         <!-- Wishlist Book Grid -->
         <div id="wishlist-container"></div>
